--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest watch",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:main": "vitest run --config vitest.main.config.ts",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
