--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "jing-tool",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "description": "An Electron application with Vue and TypeScript",
   "main": "./out/main/index.js",
-  "author": "example.com",
+  "author": "teatang",
   "homepage": "https://electron-vite.org",
   "scripts": {
     "format": "prettier --write .",
