update github actions

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -2,13 +2,21 @@ appId: com.jing-tool.app
 productName: jing-tool
 directories:
   buildResources: build
+  output: dist
 files:
   - '!**/.vscode/*'
-  - '!src/*'
+  - '!src/**'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
   - '!{.eslintcache,eslint.config.mjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
+  - '!{.github/**}'
+  - from: .
+    filter:
+      - 'package.json'
+      - 'package-lock.json'
+      - 'node_modules/**'
+      - 'out/**'
 asarUnpack:
   - resources/**
 win:
