--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@element-plus/icons-vue": "^2.3.2",
     "element-plus": "^2.13.1",
+    "mermaid": "^11.4.1",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
