--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@element-plus/icons-vue": "^2.3.2",
     "element-plus": "^2.13.1",
     "mermaid": "^11.4.1",
+    "pinia": "^2.3.0",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
