--- a/package.json
+++ b/package.json
@@ -41,13 +41,16 @@
     "@vitejs/plugin-vue": "^6.0.2",
     "@vitest/ui": "^4.0.17",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.21",
     "electron": "^39.2.6",
     "electron-builder": "^26.0.12",
     "electron-vite": "^5.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "^10.6.2",
     "happy-dom": "^20.3.4",
+    "postcss": "^8.5.3",
     "prettier": "^3.7.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3",
     "vite": "^7.2.6",
     "vitest": "^4.0.17",
